[gd_scene load_steps=7 format=3 uid="uid://dk5c0ulwu1p7u"]

[ext_resource type="Theme" uid="uid://cs33qvqc60ek3" path="res://theme.tres" id="1_xqage"]
[ext_resource type="Script" path="res://items_workshop/item_inspector/item_inspector.gd" id="2_nrjcj"]
[ext_resource type="PackedScene" uid="uid://csn4r5tegixac" path="res://items_workshop/item_inspector/points_editor/points_editor_point.tscn" id="3_fm3ji"]
[ext_resource type="PackedScene" uid="uid://b06swf75jd67p" path="res://items_workshop/item_inspector/tabs/overview.tscn" id="4_k0q57"]
[ext_resource type="PackedScene" uid="uid://dubsnfnufbcw3" path="res://items_workshop/item_inspector/tabs/joints.tscn" id="5_ou528"]
[ext_resource type="PackedScene" uid="uid://clmqvuer8ehnq" path="res://items_workshop/item_inspector/tabs/animations.tscn" id="6_otk1t"]

[node name="ItemInspector" type="Control"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 400.0
grow_vertical = 2
theme = ExtResource("1_xqage")
script = ExtResource("2_nrjcj")
point_scene = ExtResource("3_fm3ji")

[node name="EmptyText" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="EmptyText"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Select or drop an item here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TabContainer" type="TabContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1

[node name="Overview" parent="TabContainer" instance=ExtResource("4_k0q57")]
unique_name_in_owner = true
layout_mode = 2

[node name="Joints" parent="TabContainer" instance=ExtResource("5_ou528")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Animations" parent="TabContainer" instance=ExtResource("6_otk1t")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[connection signal="joint_changed" from="TabContainer/Joints" to="." method="_on_joints_tab_joint_changed"]
[connection signal="animation_preview_requested" from="TabContainer/Animations" to="." method="_on_animations_animation_preview_requested"]
[connection signal="ornament_changed" from="TabContainer/Animations" to="." method="_on_animations_ornament_changed"]
